tests/content/payloads/bad/json/bad-entry-char.ts
const payload = "a: 123"

export default payload
